Set transition diration to 0, while moving from clones

--- a/src/components/carousel-compound/Carousel.css
+++ b/src/components/carousel-compound/Carousel.css
@@ -16,7 +16,7 @@
   display: flex;
   transition: translate;
   transition-property: transform;
-  transition-duration: 300ms;
+  /* transition-duration: 300ms; */
   transition-timing-function: ease-in-out;
 }
 
